[package]
name = "voltaire"
version = "0.1.0"
authors = ["Matt Freitas-Stavola <matt.freitas@lifars.com>"]

[dependencies]

[dependencies.clap]
version = "2"
default-features = false

features = [ "suggestions", "color", "yaml" ]

[dev-dependencies.clap]
version = "2"
default-features = false

features = [ "suggestions", "color", "yaml", "lints" ]

[profile.dev]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 2
panic = 'unwind'

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
